--- a/deploy/chart/templates/controller/role.yaml
+++ b/deploy/chart/templates/controller/role.yaml
@@ -109,3 +109,14 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - ipam.everoute.io
+  resources:
+  - ippools
+  - ippools/status
+  verbs:
+  - patch
+  - update
+  - get
+  - list
+  - watch
