--- a/deploy/chart/templates/controller/role.yaml
+++ b/deploy/chart/templates/controller/role.yaml
@@ -120,3 +120,12 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - apps
+  resources:
+  - statefulsets
+  verbs:
+  - update
+  - get
+  - watch
+  - list
