--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -96,17 +96,13 @@ jobs:
       matrix:
         enable-proxy: [true, false]
         encap-mode: ["", geneve]
+        include:
+          - ipam: "everoute"
+            enable-proxy: true
+            encap-mode: "geneve"
     runs-on: [self-hosted, pod-k8s-e2e-v2]
     steps:
       - uses: actions/checkout@v2
-
-      - name: set if run service e2e case or not
-        run: |
-          if [[ "${{ matrix.enable-proxy }}" == "true" ]]; then
-            echo "runservice=true" >> $GITHUB_ENV
-          else
-            echo "runservice=false" >> $GITHUB_ENV
-          fi
 
       - name: config PATH
         run: |
@@ -125,7 +121,7 @@ jobs:
         run: sudo mkdir -p /runner/_work/everoute/everoute/k8se2e && sudo cp -r /home/runner/k8se2e/bin/ /runner/_work/everoute/everoute/k8se2e/bin/
       
       - name: generate everoute cni deploy yaml
-        run: helm template deploy/chart --set CNIConf.encapMode=${{ matrix.encap-mode }},CNIConf.enableProxy=${{ matrix.enable-proxy }},image.repository=registry.smtx.io/everoute/everoute_release,image.tag=${{ github.sha }} > deploy/everoute.yaml
+        run: helm template deploy/chart --set CNIConf.encapMode=${{ matrix.encap-mode }},CNIConf.enableProxy=${{ matrix.enable-proxy }},CNIConf.ipam=${{ matrix.ipam }},image.repository=registry.smtx.io/everoute/everoute_release,image.tag=${{ github.sha }} > deploy/everoute.yaml
 
       - name: test kubectl connect to sks
         run: kubectl get crd --kubeconfig /home/runner/sksconfig/sksconfig | grep smart
@@ -168,6 +164,7 @@ jobs:
       - name: deploy everoute cni
         run: |
           cat deploy/everoute.yaml
+          kubectl apply -f deploy/chart/templates/crds/ipam.everoute.io_ippools.yaml
           kubectl apply -f deploy/everoute.yaml
 
       - name: wait k8s cluster ready
@@ -183,8 +180,13 @@ jobs:
           kubectl --kubeconfig /home/runner/sksconfig/sksconfig get ksc ${{ env.CLUSTER_NAME }}
           kubectl get nodes -owide
 
+      - name: create ippool
+        if: matrix.ipam == 'everoute'
+        run: |
+          kubectl apply -f hack/ippool_ci.yaml
+
       - name: run ServiceProxy cases
-        if: env.runservice == 'true'
+        if: matrix.enable-proxy == true
         timeout-minutes: 20
         run: ./k8se2e/bin/ginkgo -nodes=5 --skip="NodePort|SCTP|hairpin|ProxyTerminatingEndpoints|rejected|IPv6|Networking" --focus="Services" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
