--- a/hack/ippool_ci.yaml
+++ b/hack/ippool_ci.yaml
@@ -1,13 +1,13 @@
-apiVersion: ipam.everoute.io/v1alpha1
-kind: IPPool
-metadata:
-  name: ippool-ci0
-  namespace: kube-system
-spec:
-  cidr: 16.16.0.0/29
-  subnet: 16.16.0.0/24
-  gateway: 16.16.0.1
----
+# apiVersion: ipam.everoute.io/v1alpha1
+# kind: IPPool
+# metadata:
+#   name: ippool-ci0
+#   namespace: kube-system
+# spec:
+#   cidr: 16.16.0.0/29
+#   subnet: 16.16.0.0/24
+#   gateway: 16.16.0.1
+# ---
 apiVersion: ipam.everoute.io/v1alpha1
 kind: IPPool
 metadata:
