--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -94,13 +94,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        enable-proxy: [false]
-        encap-mode: ["", geneve]
-        include:
-          - ipam: "everoute"
-            enable-proxy: true
-            encap-mode: "geneve"
-    runs-on: [self-hosted, pod-k8s-e2e-v2]
+        enable-proxy: [true]
+        encap-mode: [geneve]
+        # include:
+        #   - ipam: "everoute"
+        #     enable-proxy: true
+        #     encap-mode: "geneve"
+    runs-on: [self-hosted, pod-k8s-e2e-v2, idc]
     steps:
       - uses: actions/checkout@v2
 
@@ -136,7 +136,7 @@ jobs:
           echo "VIP=$ip" >> $GITHUB_ENV
       
       - name: gen k8s cluster name
-        run: echo "CLUSTER_NAME=k8s-e2e-$RANDOM" >> $GITHUB_ENV
+        run: echo "CLUSTER_NAME=k8s-e2e-zjall-$RANDOM" >> $GITHUB_ENV
 
       - name: create k8s cluster...
         run: |
@@ -183,21 +183,21 @@ jobs:
 
       - name: run ServiceProxy cases
         if: matrix.enable-proxy == true
-        timeout-minutes: 20
-        run: ./k8se2e/bin/ginkgo -nodes=5 --skip="NodePort|SCTP|hairpin|ProxyTerminatingEndpoints|rejected|IPv6|Networking" --focus="Services" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
+        timeout-minutes: 25
+        run: ./k8se2e/bin/ginkgo -nodes=5 --skip="SCTP|hairpin|ProxyTerminatingEndpoints|rejected|IPv6|Networking" --focus="Services" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
       - name: run NetworkPolicy case
         timeout-minutes: 25
         run: ./k8se2e/bin/ginkgo -nodes=10 --skip="SCTP" --focus="NetworkPolicy" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
-      - name: delete test k8s cluster
-        id: delenv
-        if: ${{ always() }}
-        run: kubectl --kubeconfig /home/runner/sksconfig/sksconfig delete -f hack/${{ env.Tmpl }}
+      # - name: delete test k8s cluster
+      #   id: delenv
+      #   if: ${{ always() }}
+      #   run: kubectl --kubeconfig /home/runner/sksconfig/sksconfig delete -f hack/${{ env.Tmpl }}
 
-      - name: recycle vip
-        if: ${{ always() && steps.delenv.conclusion == 'success' }}
-        run: curl -X DELETE "https://ip.dev.smtx.io/v1/ips?name="${{ env.PoolName }}"&ip="${{ env.VIP }}
+      # - name: recycle vip
+      #   if: ${{ always() && steps.delenv.conclusion == 'success' }}
+      #   run: curl -X DELETE "https://ip.dev.smtx.io/v1/ips?name="${{ env.PoolName }}"&ip="${{ env.VIP }}
   
   # run-tower-e2e:
   #   runs-on: [self-hosted, tower]
