feat: set default config is geneve and enable everoute proxy

--- a/deploy/chart/values.yaml
+++ b/deploy/chart/values.yaml
@@ -10,8 +10,8 @@ bridgeName: cnibr0
 enableCNI: true
 CNIConf:
   localGwIP: 100.64.254.254
-  enableProxy: false
-  encapMode: ""
+  enableProxy: true
+  encapMode: "geneve"
   mtu: 0
   vni: 5000
   ipam: ""
