--- a/deploy/chart/templates/config.yaml
+++ b/deploy/chart/templates/config.yaml
@@ -4,22 +4,34 @@ data:
   agentconfig.yaml: |
     datapathConfig:
       {{ .Values.bridgeName }}: {{ .Values.bridgeName }}
-    enableCNI: {{ .Values.enableCNI }}
+    enableCNI: {{ .Values.enableCNI | default false }}
     CNIConf:
-      localGwIP: {{ .Values.CNIConf.localGwIP }}
       # enable everoute proxy
-      enableProxy: {{ .Values.CNIConf.enableProxy }}
-      # encapMode: geneve # use overlay mode
+      enableProxy: {{ .Values.CNIConf.enableProxy | default false }}
+      # when disable everoute proxy, must set localGwIP
+      {{- if ne (.Values.CNIConf.localGwIP | default "") "" }}
+      localGwIP: {{ .Values.CNIConf.localGwIP }}
+      {{- else}}
+      # localGwIP: 100.64.254.254
+      {{- end}}
+
+      # use overlay mode
       {{- if ne (.Values.CNIConf.encapMode | default "") "" }}
       encapMode: {{ .Values.CNIConf.encapMode }}
+      {{- else}}
+      # encapMode: geneve
       {{- end}}
-      # specified pod mtu, default value is 0, when mtu=0, the pod mtu will set according to node mtu
-      mtu: {{ .Values.CNIConf.mtu }}
       # specified encap vni, only valid when encapMode isn't empty, default is 5000 
-      vni: {{ .Values.CNIConf.vni }}
-      # ipam: everoute # use everoute ipam
+      vni: {{ .Values.CNIConf.vni | default 5000 }}
+
+      # specified pod mtu, default value is 0, when mtu=0, the pod mtu will set according to node mtu
+      mtu: {{ .Values.CNIConf.mtu | default 0 }}
+
+      # use everoute ipam
       {{- if ne (.Values.CNIConf.ipam | default "") "" }}
       ipam: {{ .Values.CNIConf.ipam }}
+      {{- else}}
+      # ipam: everoute
       {{- end}}
   cni-conf.conflist: |
     {
@@ -36,17 +48,25 @@ data:
         ]
     }
   controllerconfig.yaml: |
-    enableCNI: {{ .Values.enableCNI }}
+    enableCNI: {{ .Values.enableCNI | default false }}
     CNIConf:
       # enable everoute proxy
-      enableProxy: {{ .Values.CNIConf.enableProxy }}
-      # encapMode: geneve # use overlay mode
+      enableProxy: {{ .Values.CNIConf.enableProxy | default false }}
+
+      # use overlay mode
       {{- if ne (.Values.CNIConf.encapMode | default "") "" }}
       encapMode: {{ .Values.CNIConf.encapMode }}
+      {{- else}}
+      # encapMode: geneve
       {{- end}}
+
+      # use everoute ipam, and when use everoute ipam, must set ipamCleanPeriod, unit is second
       {{- if ne (.Values.CNIConf.ipam | default "") "" }}
       ipam: {{ .Values.CNIConf.ipam }}
       ipamCleanPeriod: {{ .Values.CNIConf.ipamCleanPeriod | default 30 }}
+      {{- else}}
+      # ipam: everoute
+      # ipamCleanPeriod: 30
       {{- end}}
 kind: ConfigMap
 metadata:
