--- a/deploy/chart/templates/controller/controller.yaml
+++ b/deploy/chart/templates/controller/controller.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: everoute-controller
-  namespace: kube-system
+  namespace: {{ .Release.Namespace }}
   labels:
     app: everoute
     component: everoute-controller
