--- a/deploy/chart/templates/agent/agent.yaml
+++ b/deploy/chart/templates/agent/agent.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: everoute-agent
-  namespace: kube-system
+  namespace: {{ .Release.Namespace }}
   labels:
     app: everoute
     component: everoute-agent
