--- a/deploy/chart/templates/agent/serviceaccount.yaml
+++ b/deploy/chart/templates/agent/serviceaccount.yaml
@@ -3,4 +3,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: everoute-agent
-  namespace: kube-system
+  namespace: {{ .Release.Namespace }}
