feat: add strict mac mode for endpoint

--- a/deploy/chart/templates/crds/agent.everoute.io_agentinfos.yaml
+++ b/deploy/chart/templates/crds/agent.everoute.io_agentinfos.yaml
@@ -83,6 +83,10 @@ spec:
                                 ipmap:
                                   additionalProperties:
                                     properties:
+                                      mac:
+                                        description: Mac is src mac of ip pkt, empty
+                                          means equal to interface mac.
+                                        type: string
                                       updateTime:
                                         format: date-time
                                         type: string
