--- a/deploy/chart/templates/crds/security.everoute.io_endpoints.yaml
+++ b/deploy/chart/templates/crds/security.everoute.io_endpoints.yaml
@@ -100,6 +100,10 @@ spec:
                 - externalIDName
                 - externalIDValue
                 type: object
+              stictMac:
+                description: 'StrictMac is a ip filter switch true: filter ip which
+                  src mac does not equal interface mac false: no action'
+                type: boolean
               type:
                 default: dynamic
                 description: Type of this Endpoint
@@ -114,6 +118,7 @@ spec:
                 type: integer
             required:
             - reference
+            - stictMac
             - vid
             type: object
           status:
