--- a/deploy/chart/templates/crds/security.everoute.io_securitypolicies.yaml
+++ b/deploy/chart/templates/crds/security.everoute.io_securitypolicies.yaml
@@ -956,6 +956,25 @@ spec:
                   - name
                   type: object
                 type: array
+              logging:
+                description: Logging defines the policy logging configuration.
+                properties:
+                  enabled:
+                    description: Enabled would log connections when the policy matched.
+                    type: boolean
+                  policyID:
+                    description: PolicyID is a user defined identity of policy, which
+                      would be record in logs and metrics. Can be repeated between
+                      different policies. Defaults to namespace/name.
+                    type: string
+                  policyName:
+                    description: PolicyName is a user defined name of policy, which
+                      would be record in logs. Can be repeated between different policies.
+                      Defaults to namespace/name.
+                    type: string
+                required:
+                - enabled
+                type: object
               policyTypes:
                 description: List of rule types that the Security relates to. Valid
                   options are "Ingress", "Egress", or "Ingress,Egress". If this field
