--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -2106,7 +2106,8 @@ spec:
                 type: array
               priority:
                 description: Priority Specifies the priority of the SecurityPolicy
-                  on the tier to which it belongs Defaults is 0
+                  on the tier to which it belongs (only valid when spec.tier=tier2)
+                  Defaults is 0 Blocklist and Allowlist can't set same priority
                 format: int32
                 maximum: 100
                 minimum: 0
